--- a/SinfarWebClient/SinfarWebClient/www/webclient.html
+++ b/SinfarWebClient/SinfarWebClient/www/webclient.html
@@ -891,12 +891,12 @@
                 <div ng-if="!player.authed" class="md-padding" style="font-family:arial;font-weight:bold;color:#FFF;background-color:#000;overflow-y:auto;" flex layout-fill>
                     <h2>New Standalone Chat Client:</h2>
                     <div class="md-padding">
-                        <a class="messageLink" href="windows-x32.zip">Windows 32 bit</a><br />
-                        <a class="messageLink" href="windows-x64.zip">Windows 64 bit</a><br />
-                        <a class="messageLink" href="linux-x32.zip">Linux 32 bit</a><br />
-                        <a class="messageLink" href="linux-x64.zip">Linux 64 bit</a><br />
-                        <a class="messageLink" href="mac-x32.zip">Mac 32 bit</a><br />
-                        <a class="messageLink" href="mac-x64.zip">Mac 64 bit</a>
+                        <a class="messageLink" href="windows-x32-v0.2.zip">Windows 32 bit</a><br />
+                        <a class="messageLink" href="windows-x64-v0.2.zip">Windows 64 bit</a><br />
+                        <a class="messageLink" href="linux-x32-v0.2.zip">Linux 32 bit</a><br />
+                        <a class="messageLink" href="linux-x64-v0.2.zip">Linux 64 bit</a><br />
+                        <a class="messageLink" href="mac-x32-v0.2.zip">Mac 32 bit</a><br />
+                        <a class="messageLink" href="mac-x64-v0.2.zip">Mac 64 bit</a>
                     </div>
                     <center><h3><font color=#fefe20>Sinfar uses all default chat channels plus many new ones.</font></h3></center>
                     <br />
