--- a/SinfarWebClient/SinfarWebClient/www/webclient.html
+++ b/SinfarWebClient/SinfarWebClient/www/webclient.html
@@ -45,103 +45,7 @@
             </div>
             <div flex layout="column">
                 <md-button ng-click="exportChatlog()">Export Chat Log</md-button>
-                <div ng-click="playerListExpand = !playerListExpand"
-                     class="md-padding"
-                     ng-style="{'background-color': playerListExpand ? getMaterialColor('sinfarGold','A700') : getMaterialColor('sinfarGold','900')}">
-                    <i class="fa fa-users"> Online Player List</i>
-                </div>
-                <div class="md-padding" ng-show="playerListExpand"
-                     ng-style="{'background-color': getMaterialColor('sinfarGold','A700')}">
-                    <!--player list search-->
-                    <div layout="row" flex>
-                        <input ng-model="searchText" class="form-control" placeholder="Player Search" flex>
-                    </div>
-                    <!--list of players per server-->
-                    <div ng-if="playerList.length" layout="column" class="md-padding">
-                        <!--server list-->
-                        <div ng-repeat="masterServer in servers | filter:{devMasterServer:true,useWebClient:true}"
-                             layout="column">
-                            <div ng-click="masterServer.devGroupExpand = !masterServer.devGroupExpand" style="cursor:pointer;" class="md-padding">{{masterServer.name}} Servers</div>
-                            <div ng-show="masterServer.devGroupExpand"
-                                 ng-repeat="server in servers | filter:{vaultId:masterServer.vaultId,useWebClient:true}"
-                                 layout="column">
-                                <div class="settingsMenu"
-                                     layout="row"
-                                     layout-align="start center"
-                                     ng-click="server.expanded = !server.expanded" style="padding:10px;">
-                                    <div flex style="text-align:left;" layout-align="center center">
-                                        <i class="fa" ng-class="{'fa-angle-double-right':!server.expanded,'fa-angle-double-down':server.expanded}">
-                                            {{server.name}}
-                                        </i>
-                                    </div>
-                                    <div flex style="text-align:right;">
-                                        <span style="background-color:black;border-radius:15px;padding:5px;">
-                                            {{pfilter.length}}
-                                        </span>
-                                    </div>
-                                </div>
-                                <div>
-                                    <div ng-show="server.expanded"
-                                         ng-repeat="player in pfilter = ((playerList | filter:{chatClient:server.port} | filter:searchText) | orderBy:['pcName', 'playerName'])"
-                                         ng-class="{igPlist:settings.ignores.indexOf(player.playerId)!=-1}">
-                                        <div layout="row" layout-align="start center" style="padding-left:15px">
-                                            <!--functions menu-->
-                                            <md-menu>
-                                                <span class="padding-right:1em;" onmouseover="this.style.color='gold'" onmouseout="this.style.color='white'" aria-label="PC Menu" ng-click="openMenu($mdOpenMenu, $event)">
-                                                    <i class="fa fa-angle-down"></i>
-                                                </span>
-                                                <md-menu-content>
-                                                    <md-menu-item>
-                                                        <md-button aria-label="More Info">
-                                                            <i class="fa fa-search" ng-click="charInfo(player)"> More Info</i>
-                                                        </md-button>
-                                                    </md-menu-item>
-                                                    <md-menu-item ng_if="settings.friends.indexOf(player.playerId)==-1">
-                                                        <md-button aria-label="Friend">
-                                                            <i class="fa fa-heart-o" ng-click="addFriend(player.playerId)"> Add Friend.</i>
-                                                        </md-button>
-                                                    </md-menu-item>
-                                                    <md-menu-item ng_if="settings.friends.indexOf(player.playerId)!=-1">
-                                                        <md-button aria-label="Unfriend">
-                                                            <i class="fa fa-heart" ng-click="remFriend(player.playerId)"> Remove Friend</i>
-                                                        </md-button>
-                                                    </md-menu-item>
-                                                    <md-menu-item ng_if="settings.ignores.indexOf(player.playerId)==-1">
-                                                        <md-button aria-label="Ignore">
-                                                            <i class="fa fa-minus" ng-click="mutePlayer(player.playerId)"> OOC Ignore</i>
-                                                        </md-button>
-                                                    </md-menu-item>
-                                                    <md-menu-item ng_if="settings.ignores.indexOf(player.playerId)!=-1">
-                                                        <md-button aria-label="Un-Ignore">
-                                                            <i class="fa fa-check" ng-click="unmutePlayer(player.playerId)"> Un-Ignore</i>
-                                                        </md-button>
-                                                    </md-menu-item>
-                                                </md-menu-content>
-                                            </md-menu>
-                                            <!--player/char-->
-                                            <img ng-src="http://nwn.sinfar.net{{ player.portrait }}" class="img-circle" style="margin-left:5px;" ng-if="settings.portraits" />
-                                            <span style="cursor: pointer; margin-left:5px;"
-                                                  ng-class="{sinfarfriend:settings.friends.indexOf(player.playerId)!=-1}"
-                                                  ng-show="!player.pcName.length"
-                                                  ng-click="setPM(player)">
-                                                {{player.playerName}}
-                                            </span>
-                                            <span style="cursor: pointer; margin-left:5px;"
-                                                  ng-class="{'sinfarfriend':settings.friends.indexOf(player.playerId)!=-1}"
-                                                  ng-click="setPM(player)"
-                                                  ng-if="player.pcName.length">
-                                                <md-tooltip md-direction="right">
-                                                    {{player.playerName}}
-                                                </md-tooltip>
-                                                {{player.pcName}}
-                                            </span>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                <player-list></player-list>
                 <div ng-click="sidenavSettingsExpand = !sidenavSettingsExpand"
                      class="md-padding" ng-style="{'background-color': sidenavSettingsExpand ? getMaterialColor('sinfarGold','A700') : getMaterialColor('sinfarGold','900')}">
                     <i class="fa fa-cogs"> Settings</i>
